Remove phone number from CV

--- a/assets/rodney-ramdas-cv.html
+++ b/assets/rodney-ramdas-cv.html
@@ -124,7 +124,7 @@
     <div class="title">Engineering Director / Engineering Manager / IT Lead</div>
     <div class="contact">
       Rotterdam, The Netherlands &middot; Born 06-11-1974 (Dutch)<br>
-      <a href="mailto:rramdas@gmail.com">rramdas@gmail.com</a> &middot; +31 6 222 366 84<br>
+      <a href="mailto:rramdas@gmail.com">rramdas@gmail.com</a><br>
       <a href="https://linkedin.com/in/rodneyramdas">linkedin.com/in/rodneyramdas</a> &middot;
       <a href="https://rramdas.github.io/linkedin/">rramdas.github.io/linkedin/</a><br>
       Native Dutch speaker
